--- a/project/src/css/TextField.css
+++ b/project/src/css/TextField.css
@@ -84,7 +84,7 @@ body {
     position: absolute;
     cursor: pointer;
     right: 15px;
-    margin-top: 15px !important;
+    margin-top: 10px !important;
     border: none !important;
     z-index: 3;
 }
@@ -110,6 +110,7 @@ body {
 
 .rightIcons {
     position: absolute;
+    cursor: pointer;
     right: 0;
     margin-top: 13px;
     border: none !important;
@@ -122,6 +123,7 @@ body {
 
 .leftIcons {
     position: absolute;
+    cursor: pointer;
     left: 0;
     margin-top: 2px !important;
     border: none !important;
@@ -147,6 +149,7 @@ body {
 
 .leftIconSearch {
     position: absolute;
+    cursor: pointer;
     left: 0;
     margin-top: 12px;
     margin-left: 10px !important;
