--- a/project/src/css/card.css
+++ b/project/src/css/card.css
@@ -22,7 +22,29 @@
     border-radius: 0 8px 0 20px;
 }
 
+.hoverImg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
 
+.hoverImg:hover {
+    background-color: black;
+    opacity: 0.3;
+    border-radius: 20px;
+}
+
+.hoverImg p {
+    border-bottom: 1px solid white;
+    font-size: 15px;
+}
 
 @media screen and (max-width: 740px) {
 
